--- a/GiaoHangTietKiem/GiaoHangTietKiem/GiaoHangTietKiem.csproj
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/GiaoHangTietKiem.csproj
@@ -723,8 +723,15 @@
     <Content Include="Global.asax" />
     <Content Include="img\about.jpg" />
     <Content Include="img\blog-1.jpg" />
-    <Content Include="img\blog-2.jpg" />
     <Content Include="img\bray.jpg" />
+    <Content Include="img\image_domixi.png" />
+    <Content Include="img\image_ngokienhuypng.png" />
+    <Content Include="img\image_slide.png" />
+    <Content Include="img\image_slide5.png" />
+    <Content Include="img\image_sontungmtp.png" />
+    <Content Include="img\imgage_slide2.png" />
+    <Content Include="img\imgage_slide3.png" />
+    <Content Include="img\imgage_slide4.png" />
     <Content Include="img\manhcuong.jpg" />
     <Content Include="img\Cuong.jpg" />
     <Content Include="img\domixi.jpg" />
