--- a/GiaoHangTietKiem/GiaoHangTietKiem/bin/GiaoHangTietKiem.dll.config
+++ b/GiaoHangTietKiem/GiaoHangTietKiem/bin/GiaoHangTietKiem.dll.config
@@ -91,8 +91,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QLGiaoHangContext" connectionString="data source=LAPTOP-1HUH3ENB\SQLEXPRESS;initial catalog=QuanLyGiaoHang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="GiaoHangChatLuongContext" connectionString="data source=LAPTOP-1HUH3ENB\SQLEXPRESS;initial catalog=QuanLyGiaoHang;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QLGiaoHangContext" connectionString="data source=DESKTOP-7R66M1N\NVTHINH;initial catalog=QuanLyGiaoHang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GiaoHangChatLuongContext" connectionString="data source=DESKTOP-7R66M1N\NVTHINH;initial catalog=QuanLyGiaoHang;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
